--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "convert-to-jcamp": "^1.1.3",
     "express": "^4.16.4",
     "got": "^9.6.0"
   }
