--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "got": "^9.6.0"
+    "got": "^9.6.0",
+    "xml2js": "^0.4.19"
   }
 }
